--- a/templates/ovirt_exporter.service.j2
+++ b/templates/ovirt_exporter.service.j2
@@ -1,61 +1,68 @@
-{{ '## ' + 'ovirt_exporter.service' }}
+{{ '## ovirt_exporter.service' }}
 {{ '# ' + ansible_managed }}
-{{ '# ' + 'Do not edit manually' }}
+{{ '# Do not edit manually' }}
 
 {{ '[Unit]' }}
-{{ 'Description=ovirt_exporter' }}
-{{ 'After=network.target' }}
-{{ 'Wants=network.target' }}
+{{ 'Description=Prometheus oVirt engine exporter' }}
+{{ 'After=network.target network-online.target basic.target' }}
+{{ 'Wants=network-online.target' }}
+{{ 'StartLimitIntervalSec=30' }}
+{{ 'StartLimitBurst=3' }}
 
 {{ '[Service]' }}
 {{ 'Type=simple' }}
+{{ 'Restart=on-failure' }}
+{{ 'RestartSec=30' }}
 {{ 'User=nobody' }}
 {{ 'Group=nobody' }}
-{{ 'ExecStart=' + vars['ovirt_exporter_dest'] + '/ovirt_exporter' -}}
+{{ 'ExecStart=' + hostvars[inventory_hostname]['ovirt_exporter_dest'] +
+  '/ovirt_exporter' -}}
 {% if vars['ovirt_exporter_settings'] is defined and
   vars['ovirt_exporter_settings'] != '' %}
 {% for o in vars['ovirt_exporter_settings'] %}
-{% if o.debug is defined and o.debug == 'true' %}
+{% if o['debug'] is defined and o['debug'] == 'true' %}
 {{ ' \\' }}
 {{ '  --debug' -}}
 {% endif %}
-{% if o.insecure is defined and o.insecure == 'true' %}
+{% if o['insecure'] is defined and o['insecure'] == 'true' %}
 {{ ' \\' }}
 {{ '  --api.insecure' -}}
 {% endif %}
-{% if o.url is defined and o.url != '' %}
+{% if o['url'] is defined and o['url'] != '' %}
 {{ ' \\' }}
-{{ '  --api.url=' + o.url -}}
+{{ '  --api.url=' + o['url'] -}}
 {% endif %}
-{% if o.username is defined and o.username != '' %}
+{% if o['username'] is defined and o['username'] != '' %}
 {{ ' \\' }}
-{{ '  --api.username=' ~ o.username -}}
+{{ '  --api.username=' ~ o['username'] -}}
 {% endif %}
-{% if o.password is defined and o.password != '' %}
+{% if o['password'] is defined and o['password'] != '' %}
 {{ ' \\' }}
-{{ '  --api.password=' ~ o.password -}}
+{{ '  --api.password=' ~ o['password'] -}}
 {% endif %}
-{% if o.listen_address is defined and o.listen_address != '' %}
+{% if o['listen_address'] is defined and o['listen_address'] != '' %}
 {{ ' \\' }}
-{{ '  --web.listen-address=' + o.listen_address -}}
+{{ '  --web.listen-address=' + o['listen_address'] -}}
 {% endif %}
-{% if o.telemetry_path is defined and o.telemetry_path != '' %}
+{% if o['telemetry_path'] is defined and o['telemetry_path'] != '' %}
 {{ ' \\' }}
-{{ '  --web.telemetry-path=' + o.telemetry_path -}}
+{{ '  --web.telemetry-path=' + o['telemetry_path'] -}}
 {% endif %}
-{% if o.with_snapshots is defined and o.with_snapshots in ['true', 'false'] %}
+{% if o['with_snapshots'] is defined and o['with_snapshots'] in ['true',
+  'false'] %}
 {{ ' \\' }}
-{{ '  --with-snapshots=' + o.with_snapshots -}}
+{{ '  --with-snapshots=' + o['with_snapshots'] -}}
 {% endif %}
-{% if o.with_network is defined and o.with_network in ['true', 'false'] %}
+{% if o['with_network'] is defined and o['with_snapshots'] in ['true',
+  'false'] %}
 {{ ' \\' }}
-{{ '  --with-network=' + o.with_network -}}
+{{ '  --with-network=' + o['with_snapshots'] -}}
 {% endif %}
-{% if o.with_disks is defined and o.with_disks in ['true', 'false'] %}
+{% if o['with_disks'] is defined and o['with_disks'] in ['true', 'false'] %}
 {{ ' \\' }}
-{{ '  --with-disks=' + o.with_disks -}}
+{{ '  --with-disks=' + o['with_disks'] -}}
 {% endif %}
-{% if loop.last %}
+{% if loop['last'] %}
 {{ '' }}
 {% endif %}
 {% endfor %}
